tests/invalid/type_error_ambiguous.err_exp
type_error_ambiguous.m:039: In clause for predicate `main'/2:
type_error_ambiguous.m:039:   in argument 1 of call to predicate
type_error_ambiguous.m:039:   `io.write_int'/3:
type_error_ambiguous.m:039:   type error: variable `X' has one of the following
type_error_ambiguous.m:039:   inferred types:
type_error_ambiguous.m:039:     [38;5;203mcharacter,[39;49m
type_error_ambiguous.m:039:     [38;5;203mpred(int, string),[39;49m
type_error_ambiguous.m:039:     [38;5;203mtype_error_ambiguous.t1,[39;49m
type_error_ambiguous.m:039:     [38;5;203mtype_error_ambiguous.t2;[39;49m
type_error_ambiguous.m:039:   expected type was
type_error_ambiguous.m:039:     [38;5;40mint.[39;49m
For more information, recompile with `-E'.
